--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,12 @@ jobs:
           python-version: '3.8'
 
       - name: Install dependencies
+        working-directory: app_python
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run Tests
+        working-directory: app_python
         run: |
           python -m unittest discover -s tests
