--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           context: app_python
           file: app_python/Dockerfile
-          tags: yourusername/moscow-time-app:latest
+          tags: fatee/moscow-time-app:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
           push: true
