--- a/ansible/inventory/default_aws_ec2.yml
+++ b/ansible/inventory/default_aws_ec2.yml
@@ -3,4 +3,5 @@ all:
     yandex_vm:
       ansible_host: 51.250.42.25
       ansible_user: fateee
-      ansible_ssh_private_key_file: /home/marat/.ssh/yandex_ansible_key
+      ansible_ssh_private_key_file: /home/fateee/.ssh/yandex_ansible_key
+      ansible_python_interpreter: /home/fateee/.local_ansible_env/bin/python
