lab11 done (6 points)

--- a/k8s/moscow-time-app-deployment.yaml
+++ b/k8s/moscow-time-app-deployment.yaml
@@ -17,3 +17,9 @@ spec:
         image: fatee/moscow-time-app:latest
         ports:
         - containerPort: 5000
+        env:
+        - name: MY_CATS_NAME
+          valueFrom:
+            secretKeyRef:
+              name: secret-with-paws
+              key: mycatsname
