--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       - FLASK_APP=app.py
       - FLASK_RUN_HOST=0.0.0.0
       - FLASK_RUN_PORT=80
+    volumes:
+      - ./visits.txt:/app/visits.txt
     command: flask run --host=0.0.0.0 --port=80
 
 volumes:
