--- a/k8s/moscow-time-app/templates/statefulset.yaml
+++ b/k8s/moscow-time-app/templates/statefulset.yaml
@@ -1,13 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ include "moscow-time-app.fullname" . }}
   labels:
     {{- include "moscow-time-app.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
+  serviceName: {{ include "moscow-time-app.fullname" . }}-headless  # Headless service required for StatefulSet
   replicas: {{ .Values.replicaCount }}
-  {{- end }}
   selector:
     matchLabels:
       {{- include "moscow-time-app.selectorLabels" . | nindent 6 }}
@@ -25,7 +24,7 @@ spec:
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-      - {{- toYaml . | nindent 8 }}
+        - {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "moscow-time-app.serviceAccountName" . }}
       securityContext:
@@ -50,10 +49,6 @@ spec:
           volumeMounts:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-      {{- with .Values.volumes }}
-      volumes:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -66,3 +61,12 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+
+  volumeClaimTemplates:
+    - metadata:
+        name: data
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: {{ .Values.storage.size }}
