--- a/k8s/moscow-time-app/values.yaml
+++ b/k8s/moscow-time-app/values.yaml
@@ -1,126 +1,96 @@
-# Default values for moscow-time-app.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Default values for moscow-time-app Helm chart.
 
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
+# Replica count for StatefulSet
 replicaCount: 1
 
-# This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
+# Image configuration
 image:
-  repository: fatee/moscow-time-app
-  # This sets the pull policy for images.
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: latest
+  repository: fatee/moscow-time-app       # Docker Hub repository
+  tag: latest                             # Image tag (defaults to 'latest')
+  pullPolicy: IfNotPresent                # Image pull policy
 
-# This is for the secretes for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+# Image pull secrets (for private registries)
 imagePullSecrets: []
-# This is to override the chart name.
+
+# Helm-specific name overrides
 nameOverride: ""
 fullnameOverride: ""
 
-#This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
+# Service account settings
 serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  create: true                           # Whether to create a new service account
+  automount: true                        # Automatically mount service account tokens
+  annotations: {}                        # Additional annotations for the service account
+  name: ""                               # Name of the service account (optional)
 
-# This is for setting Kubernetes Annotations to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/ 
-podAnnotations: {}
-# This is for setting Kubernetes Labels to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels: {}
+# Pod metadata
+podAnnotations: {}                       # Custom annotations for the pod
+podLabels: {}                            # Custom labels for the pod
 
-podSecurityContext: {}
-  # fsGroup: 2000
+# Security settings
+podSecurityContext: {}                   # Security context for the pod
+securityContext: {}                      # Security context for the container
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-# This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
+# Service settings
 service:
-  # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
-  type: ClusterIP
-  # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 80
+  type: ClusterIP                        # Service type (e.g., ClusterIP, NodePort)
+  port: 80                               # External port for the service
 
-# This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
+# Ingress settings (if needed)
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: false                         # Enable or disable Ingress
+  className: ""                          # Ingress class name
+  annotations: {}                        # Additional annotations for the Ingress
   hosts:
     - host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+# Resource requests and limits for the container
+resources:
+  requests:
+    cpu: "100m"                          # Minimum CPU required
+    memory: "128Mi"                      # Minimum memory required
+  limits:
+    cpu: "200m"                          # Maximum CPU allowed
+    memory: "256Mi"                      # Maximum memory allowed
 
-# This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+# Health check (liveness and readiness probes)
 livenessProbe:
   httpGet:
     path: /
     port: http
+  initialDelaySeconds: 10
+  periodSeconds: 5
 readinessProbe:
   httpGet:
     path: /
     port: http
+  initialDelaySeconds: 5
+  periodSeconds: 5
 
-#This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
+# Autoscaling settings (optional)
 autoscaling:
-  enabled: false
+  enabled: false                         # Enable or disable autoscaling (ignored for StatefulSet)
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
 
-# Additional volumes on the output Deployment definition.
+# Persistent storage configuration for StatefulSet
+storage:
+  size: 1Gi                              # Persistent storage size for each replica's volume
+
+# Additional volumes and mounts for the pod
 volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
 volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
 
+# Node affinity and toleration settings
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
 
+# Secret values
 secrets:
-  mycatsname: "uksus"
+  mycatsname: "uksus"                    # Example secret value
