--- a/k8s/moscow-time-app-service.yaml
+++ b/k8s/moscow-time-app-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: moscow-time-app-service
 spec:
   selector:
-    app: moscow-time-app
+    app.kubernetes.io/name: moscow-time-app
   ports:
     - port: 5000
       targetPort: 5000
