--- a/monitoring/prometheus-config.yml
+++ b/monitoring/prometheus-config.yml
@@ -1,11 +1,61 @@
-global:
-  scrape_interval: 15s
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: prometheus-config
+  namespace: monitoring
+data:
+  prometheus.yml: |
+    global:
+      scrape_interval: 15s
 
-scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090'] 
+    scrape_configs:
+      - job_name: 'prometheus'
+        static_configs:
+          - targets: ['localhost:9090']
 
-  - job_name: 'loki'
-    static_configs:
-      - targets: ['loki:3100'] 
+      - job_name: 'loki'
+        static_configs:
+          - targets: ['loki:3100']
+
+      - job_name: 'moscow-time-app'
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
+            regex: moscow-time-app
+            action: keep
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_label_statefulset]
+            target_label: statefulset
+        metrics_path: /metrics
+        scrape_interval: 30s
+
+      - job_name: 'kubernetes-pods'
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app]
+            target_label: app
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
+        metrics_path: /metrics
+        scrape_interval: 30s
+
+      - job_name: 'kube-scheduler'
+        static_configs:
+          - targets: ['192.168.49.2:10259']
+        metrics_path: /metrics
+        scheme: https
+
+      - job_name: 'kube-controller-manager'
+        static_configs:
+          - targets: ['192.168.49.2:10257']
+        metrics_path: /metrics
+        scheme: https
+
+      - job_name: 'etcd'
+        static_configs:
+          - targets: ['192.168.49.2:2381']
+        metrics_path: /metrics
+        scheme: http
